# Project-Orion

./: .env.example  .gitignore  PROJECT_MEMORY.md  README.md  index.html
.github/workflows/: security-scan.yml
backend-rust/: Cargo.toml
backend-rust/migrations/: 0001_initial.sql
backend-rust/src/: api.rs  config.rs  db.rs  error.rs  llm.rs  main.rs  robot.rs  stt.rs  tts.rs  ws.rs
frontend-react/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend-react/src/: App.css  App.tsx  index.css  store.ts
frontend-react/src/components/: ChatPanel.tsx  EventLog.tsx  HudRings.tsx  StatusPanel.tsx  Waveform.tsx
frontend-react/src/hooks/: useTts.ts  useVoiceInput.ts
frontend-react/src/lib/: api.ts
hardware/: README.md
hardware/specs/: carrier-board.md  expansion-connector.md
pcb-kicad/: README.md
pcb-kicad/orion-carrier/: compute.kicad_sch  expansion.kicad_sch  io.kicad_sch  orion-carrier.kicad_pro  orion-carrier.kicad_sch  power.kicad_sch
